--- a/css/login.css
+++ b/css/login.css
@@ -60,7 +60,7 @@ body {
 }
 
 .login-logo {
-    font-size: 40px;
+    font-size: clamp(30px,40px,40px);
     font-weight: 900;
     margin-bottom: 35px;
     letter-spacing: 1px;
